Move DimensionState to GameContext